--- a/init.org
+++ b/init.org
@@ -618,14 +618,14 @@ subfolder:
 #+END_SRC
 
 Use Counsel for enhanced M-x, Find File (~C-x C-f~ or ~C-x C-o~ in other
-window), yank (~C-S-y~):
+window), yank from history (~C-S-y~):
 
 #+BEGIN_SRC emacs-lisp
   (setq counsel-find-file-at-point t)
   (global-set-key (kbd "M-x") 'counsel-M-x)
   (global-set-key (kbd "C-x C-f") 'counsel-find-file)
   (global-set-key (kbd "C-x C-o") 'find-file-other-window)
-  (global-set-key (kbd "C-S-s") 'counsel-yank-pop)
+  (global-set-key (kbd "C-S-y") 'counsel-yank-pop)
   ;; (global-set-key (kbd "<f1> f") 'counsel-describe-function)
   ;; (global-set-key (kbd "<f1> v") 'counsel-describe-variable)
   ;; (global-set-key (kbd "<f1> l") 'counsel-find-library)
